# substrait-explain

./: AGENTS.md  API.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GRAMMAR.md  Justfile  LICENSE-3rdparty.csv  LICENSE_GENERATION.md  NOTICE  README.md  RELEASING.md  build.rs  generate_licenses.sh  index.html  pre-commit.sh  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom.md  feature_request.md
.github/actions/cache/: action.yaml
.github/workflows/: docs.yml  publish.yml  release-plz.yml  release-pr.yml  rust.yml
adrs/: lalrpop.md  pest-typed.md
example-plans/: basic.substrait  custom.substrait  simple.substrait
examples/: advanced_usage.rs  basic_usage.rs  extensions.rs  simple_interface.rs
scripts/: clippy.sh  fmt.sh
src/: cli.rs  expressions.rs  fixtures.rs  grammar.rs  json.rs  lib.rs  main.rs  rels.rs  textify.rs  types.rs  types_tests.rs
src/extensions/: any.rs  args.rs  conversion.rs  enhancements.rs  examples.rs  mod.rs  registry.rs  simple.rs
src/parser/: ast.rs  chunks.rs  common.rs  convert.rs  errors.rs  expression_grammar.pest  expressions.rs  extensions.rs  header.rs  lalrpop_line.rs  line_grammar.lalrpop  literals.rs  mod.rs  relations.rs  structural.rs  types.rs  warnings.rs
src/parser/expressions/: core.rs  mod.rs
src/parser/lower/: expr.rs  extensions.rs  literals.rs  mod.rs  relations.rs  types.rs  validate.rs
src/parser/relations/: ast.rs  core.rs  mod.rs
src/structural/: mod.rs
src/structure/: expressions.rs  extensions.rs  mod.rs
src/textify/: addenda.rs  expressions.rs  extensions.rs  fixtures.rs  foundation.rs  literals.rs  mod.rs  plan.rs  rels.rs  types.rs  writer.rs
tests/: adv_extension_roundtrip.rs  extension_roundtrip.rs  extension_table.rs  header_roundtrip.rs  json_parsing.rs  literal_roundtrip.rs  multi_line_roundtrip.rs  plan_roundtrip.rs  types.rs
tests/common/: mod.rs
tests/json_parsing/: parquet_scan.proto  plan.substrait  plan_pbjson.json  plan_protojson.json
