[package]
name = "substrait-explain"
version = "0.1.0"
edition = "2024"
authors = [
    "Wendell Smith <wendell.smith@datadoghq.com>",
    "DataDog <opensource@datadoghq.com>",
]
license = "Apache-2.0"
repository = "https://github.com/DataDog/substrait-explain"
description = "Explain Substrait plans as human-readable text."
homepage = "https://datadoghq.dev/substrait-explain/"
readme = "README.md"
keywords = ["substrait", "explain", "plan", "query", "database"]
categories = ["data-structures", "database-implementations", "database"]

[[bin]]
name = "substrait-explain"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"
required-features = ["serde"]

[features]
# Use a pre-built protoc binary instead of building from source. Useful for CI.
protoc = ["substrait/protoc"]
# Used in examples, otherwise not helpful
serde = ["substrait/serde"]
# CLI functionality with additional dependencies
cli = ["dep:clap", "dep:serde_json", "dep:serde_yaml", "dep:anyhow", "serde"]

[dependencies]
anyhow = { version = "1.0", optional = true }
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"], optional = true }
pest = "2.8.0"
pest_derive = "2.8.0"
prost = "0.13.5"
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
substrait = "0.57.0"
thiserror = "2.0.12"

[dev-dependencies]
# Used in examples
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
