[package]
name = "substrait-explain"
version = "0.3.0"
edition = "2024"
authors = [
    "Wendell Smith <wendell.smith@datadoghq.com>",
    "DataDog <opensource@datadoghq.com>",
]
license = "Apache-2.0"
repository = "https://github.com/DataDog/substrait-explain"
description = "Explain Substrait plans as human-readable text."
homepage = "https://datadoghq.dev/substrait-explain/"
readme = "README.md"
keywords = ["substrait", "explain", "plan", "query", "database"]
categories = ["data-structures", "database-implementations", "database"]

[[bin]]
name = "substrait-explain"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"
required-features = ["serde"]


[[example]]
name = "extensions"
path = "examples/extensions.rs"
required-features = ["cli"]

[[test]]
name = "json_parsing"
required-features = ["cli"]

[features]
# Default feature is the CLI, so 'cargo run' works automatically, as do 'cargo
# run --example …' commands. Library users may not need the CLI, so they can
# disable it.
default = ["cli"]
# Use a pre-built protoc binary instead of building from source. Useful for CI.
protoc = ["substrait/protoc"]
# Used in examples, otherwise not helpful
serde = ["substrait/serde", "dep:pbjson-types"]
# CLI functionality with additional dependencies.
# Includes prost-reflect for JSON parsing: both Go protojson (@type encoding) and Rust
# pbjson (typeUrl/value encoding) are handled
cli = ["dep:clap", "dep:serde_json", "dep:serde_yaml", "dep:anyhow", "serde", "dep:prost-reflect", "substrait/embed-descriptor"]

[dependencies]
anyhow = { version = "1.0", optional = true }
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"], optional = true }
indexmap = "2"
pbjson-types = { version = "0.9.0", optional = true }
pest = "2.8.0"
pest_derive = "2.8.0"
prost = "0.14"
prost-reflect = { version = "0.16.3", optional = true, features = ["serde"] }
prost-types = "0.14"
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
substrait = "0.62.2"
thiserror = "2.0.12"

[dev-dependencies]
# Used in examples
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
prost = "0.14"
prost-build = "0.14"
protox = "0.9"
